@@ -60,6 +60,7 @@ class SingleCapsuleOperation(CapsuleOperation):
             oldTrv = self.db.getTrove(*troveCs.getOldNameVersionFlavor())
             self.remove(oldTrv)
             trv = oldTrv.copy()
+            import epdb;epdb.st('f')
             trv.applyChangeSet(troveCs)
         else:
             oldTrv = None
