@@ -1187,9 +1187,10 @@ class TroveRefsFilesStream(dict, streams.InfoStream):
         this way is a bit odd, but it's simple and well-defined.
         """
         l = []
-        for (pathId, (path, fileId, version)) in self.iteritems():
+        for (pathId, (dirName, baseName, fileId, version)) in self.iteritems():
             v = version.asString()
-            s = misc.pack("!S16S20SHSH", pathId, fileId, path, v);
+            s = misc.pack("!S16S20SHSH", pathId, fileId,
+                          os.path.join(dirName, baseName), v);
             l.append((len(s), s))
 
         l.sort()
@@ -1620,15 +1621,20 @@ class Trove(streams.StreamSet):
         return self.type()
 
     def addFile(self, pathId, path, version, fileId):
-	assert(len(pathId) == 16)
-	assert(fileId is None or len(fileId) == 20)
+        dirName, baseName = os.path.split(path)
+        self.addRawFile(pathId, dirName, baseName, version, fileId)
+
+    def addRawFile(self, pathId, dirName, baseName, version, fileId):
+        assert(len(pathId) == 16)
+        assert(fileId is None or len(fileId) == 20)
         assert(not self.type())
-	self.idMap[pathId] = (path, fileId, version)
+        self.idMap[pathId] = (dirName, baseName, fileId, version)
 
     def addRpmCapsule(self, path, version, fileId, (name, pkgVersion,
                       release, arch, epoch)):
         assert(len(fileId) == 20)
-        self.idMap[CAPSULE_PATHID] = (path, fileId, version)
+        dir, base = os.path.split(path)
+        self.idMap[CAPSULE_PATHID] = (dir, base, fileId, version)
         self.troveInfo.capsule.type.set('rpm')
         self.troveInfo.capsule.rpm.name.set(name)
         self.troveInfo.capsule.rpm.version.set(pkgVersion)
@@ -1639,17 +1645,28 @@ class Trove(streams.StreamSet):
     def computePathHashes(self):
         self.troveInfo.pathHashes.clear()
         self.troveInfo.dirHashes.clear()
-        for path, fileId, version in self.idMap.itervalues():
-            self.troveInfo.dirHashes.addPath(os.path.dirname(path))
-            self.troveInfo.pathHashes.addPath(path)
+        for dirName, base, fileId, version in self.idMap.itervalues():
+            self.troveInfo.dirHashes.addPath(dirName)
+            self.troveInfo.pathHashes.addPath(os.path.join(dirName, base))
 
     # pathId is the only thing that must be here; the other fields could
     # be None
     def updateFile(self, pathId, path, version, fileId):
-	(origPath, origFileId, origVersion) = self.idMap[pathId]
+        if not path:
+            dirName = None
+            baseName = None
+        else:
+            dirName, baseName = os.path.split(path)
+            dirName = dirName
+            baseName = baseName
 
-	if not path:
-	    path = origPath
+        self.updateRawFile(pathId, dirName, baseName, version, fileId)
+
+    def updateRawFile(self, pathId, dirName, baseName, version, fileId):
+	(origDir, origBase, origFileId, origVersion) = self.idMap[pathId]
+
+	if baseName is None:
+            dirName, baseName = origDir, origBase
 
 	if not version:
 	    version = origVersion
@@ -1657,13 +1674,13 @@ class Trove(streams.StreamSet):
 	if not fileId:
 	    fileId = origFileId
 	    
-	self.idMap[pathId] = (path, fileId, version)
+	self.idMap[pathId] = (dirName, baseName, fileId, version)
 
     @api.developerApi
     def removeFile(self, pathId):   
 	del self.idMap[pathId]
 
-	return self.idMap.iteritems()
+	#return self.idMap.iteritems()
 
     def removeAllFiles(self):
         self.idMap = TroveRefsFilesStream()
@@ -1678,17 +1695,17 @@ class Trove(streams.StreamSet):
             # capsule, so return everything
             members = True
 
-        for (theId, (path, fileId, version)) in self.idMap.iteritems():
+        for (theId, (path, base, fileId, version)) in self.idMap.iteritems():
             if ( (theId != CAPSULE_PATHID and members) or
                  (theId == CAPSULE_PATHID and capsules) ):
-                yield (theId, path, fileId, version)
+                yield (theId, os.path.join(path, base), fileId, version)
 
     def emptyFileList(self):
         return len(self.idMap) == 0
 
     def getFile(self, pathId):
         x = self.idMap[pathId]
-	return (x[0], x[1], x[2])
+	return (os.path.join(x[0], x[1]), x[2], x[3])
 
     def hasFile(self, pathId):
 	return self.idMap.has_key(pathId)
@@ -1812,7 +1829,8 @@ class Trove(streams.StreamSet):
 
     # returns a dictionary mapping a pathId to a (path, version, trvName) tuple
     def applyChangeSet(self, trvCs, skipIntegrityChecks = False, 
-                       allowIncomplete = False, skipFiles = False):
+                       allowIncomplete = False, skipFiles = False,
+                       needNewFileMap = False):
 	"""
 	Updates the trove from the changes specified in a change set.
 	Returns a dictionary, indexed by pathId, which gives the
@@ -1839,19 +1857,29 @@ class Trove(streams.StreamSet):
 	fileMap = {}
 
         if not skipFiles:
-            for (pathId, path, fileId, fileVersion) in trvCs.getNewFileList():
-                self.addFile(pathId, path, fileVersion, fileId)
-                fileMap[pathId] = self.idMap[pathId] + \
-                                    (self.name(), None, None, None)
+            for (pathId, dirName, baseName, fileId, fileVersion) in \
+                            trvCs.getNewFileList(raw = True):
+                self.addRawFile(pathId, dirName, baseName, fileVersion, fileId)
+                if needNewFileMap:
+                    fileMap[pathId] = self.idMap[pathId] + \
+                                        (self.name(), None, None, None)
 
-            for (pathId, path, fileId, fileVersion) in \
-                                                    trvCs.getChangedFileList():
-                (oldPath, oldFileId, oldVersion) = self.idMap[pathId]
-                self.updateFile(pathId, path, fileVersion, fileId)
+            for (pathId, dirName, baseName, fileId, fileVersion) in \
+                                        trvCs.getChangedFileList(raw = True):
+                (oldDir, oldBase, oldFileId, oldVersion) = self.idMap[pathId]
+                self.updateRawFile(pathId, dirName, baseName, fileVersion,
+                                   fileId)
                 # look up the path/version in self.idMap as the ones here
                 # could be None
-                fileMap[pathId] = self.idMap[pathId] + \
-                                (self.name(), oldPath, oldFileId, oldVersion)
+                if baseName is not None:
+                    path = os.path.join(dirName, baseName)
+                else:
+                    path = None
+
+                if needNewFileMap:
+                    fileMap[pathId] = (None, fileVersion, fileId, self.name(),
+                                       os.path.join(oldDir, oldBase),
+                                       oldFileId, oldVersion)
 
             for pathId in trvCs.getOldFileList():
                 self.removeFile(pathId)
@@ -2126,20 +2154,23 @@ class Trove(streams.StreamSet):
                 chgSet.oldFile(pathId)
 
             for pathId in addedIds:
-                (selfPath, selfFileId, selfVersion) = self.idMap[pathId]
-                filesNeeded.append((pathId, None, None, selfFileId, 
+                (selfDir, selfBase, selfFileId, selfVersion) = \
+                            self.idMap[pathId]
+                filesNeeded.append((pathId, None, None, selfFileId,
                                     selfVersion))
-                chgSet.newFile(pathId, selfPath, selfFileId, selfVersion)
+                chgSet.newFile(pathId, os.path.join(selfDir, selfBase),
+                               selfFileId, selfVersion)
 
             for pathId in sameIds.keys():
-                (selfPath, selfFileId, selfVersion) = self.idMap[pathId]
-                (themPath, themFileId, themVersion) = themMap[pathId]
-
+                (selfDir, selfBase, selfFileId,
+                                    selfVersion) = self.idMap[pathId]
+                (themDir, themBase, themFileId,
+                                    themVersion) = themMap[pathId]
                 newPath = None
                 newVersion = None
 
-                if selfPath != themPath:
-                    newPath = selfPath
+                if selfDir != themDir or selfBase != themBase:
+                    newPath = os.path.join(selfDir, selfBase)
 
                 if selfVersion != themVersion or themFileId != selfFileId:
                     newVersion = selfVersion
@@ -3075,10 +3106,12 @@ class ReferencedFileList(list, streams.InfoStream):
     def freeze(self, skipSet = {}):
 	l = []
 
-	for (pathId, path, fileId, version) in self:
+	for (pathId, dirName, baseName, fileId, version) in self:
 	    l.append(pathId)
-	    if not path:
-		path = ""
+            if baseName is None:
+                path = ""
+            else:
+                path = os.path.join(dirName, baseName)
 
 	    l.append(struct.pack("!H", len(path)))
 	    l.append(path)
@@ -3111,7 +3144,14 @@ class ReferencedFileList(list, streams.InfoStream):
         while i < len(data):
             i, (pathId, path, fileId, verStr) = misc.unpack("!S16SHSHSH", i, 
                                                             data)
-            if not path: path = None
+            if not path:
+                dirName = None
+                baseName = None
+            else:
+                dirName, baseName = os.path.split(path)
+                dirName = intern(dirName)
+                baseName = intern(baseName)
+
             if not fileId: fileId = None
 
             if verStr == lastVerStr:
@@ -3123,7 +3163,8 @@ class ReferencedFileList(list, streams.InfoStream):
             else:
                 version = None
 
-	    self.append((pathId, path, fileId, version))
+            self.append((pathId, dirName, baseName, fileId,
+                         version))
 
     def __init__(self, data = None):
 	list.__init__(self)
@@ -3199,10 +3240,16 @@ class AbstractTroveChangeSet(streams.StreamSet):
 	return self.tcsType() == _TCS_TYPE_ABSOLUTE
 
     def newFile(self, pathId, path, fileId, version):
-	self.newFiles.append((pathId, path, fileId, version))
+        dirName, baseName = os.path.split(path)
+        self.newFiles.append((pathId, dirName, baseName, fileId, version))
 
-    def getNewFileList(self):
-	return self.newFiles
+    # raw means separate dirName/baseName in the tuple
+    def getNewFileList(self, raw = False):
+        if raw:
+            return self.newFiles
+
+        return [ (x[0], os.path.join(x[1], x[2]), x[3], x[4])
+                            for x in self.newFiles]
 
     def oldFile(self, pathId):
 	self.oldFiles.append(pathId)
@@ -3439,10 +3486,28 @@ class AbstractTroveChangeSet(streams.StreamSet):
 
     # path and/or version can be None
     def changedFile(self, pathId, path, fileId, version):
-	self.changedFiles.append((pathId, path, fileId, version))
+        if path:
+            dirName, baseName = os.path.split(path)
+        else:
+            dirName = None
+            baseName = None
 
-    def getChangedFileList(self):
-	return self.changedFiles
+        self.changedFiles.append((pathId, dirName, baseName, fileId, version))
+
+    # raw means separate dirName/baseName in the tuple
+    def getChangedFileList(self, raw = False):
+        if raw:
+            return self.changedFiles
+
+        l = []
+        for t in self.changedFiles:
+            if t[1] is not None or t[2] is not None:
+                t = (t[0], os.path.join(t[1], t[2]), t[3], t[4])
+            else:
+                t = (t[0], None, t[3], t[4])
+            l.append(t)
+
+        return l
 
     def hasChangedFiles(self):
         return (len(self.newFiles) + len(self.changedFiles) + 
@@ -3558,7 +3623,7 @@ class AbstractTroveChangeSet(streams.StreamSet):
         for redirect in self.redirects.iter():
             print '\t-> %s=%s' % (redirect.name(), redirect.branch())
 
-	for (pathId, path, fileId, version) in self.newFiles:
+	for (pathId, path, fileId, version) in self.getNewFileList():
 	    #f.write("\tadded (%s(.*)%s)\n" % (pathId[:6], pathId[-6:]))
             change = changeSet.getFileChange(None, fileId)
             fileobj = files.ThawFile(change, pathId)
@@ -3573,7 +3638,7 @@ class AbstractTroveChangeSet(streams.StreamSet):
                      fileobj.inode.group(), fileobj.sizeString(),
                      fileobj.timeString(), name))
 
-	for (pathId, path, fileId, version) in self.changedFiles:
+	for (pathId, path, fileId, version) in self.getChangedFileList():
 	    pathIdStr = sha1helper.md5ToString(pathId)
 	    if path:
 		f.write("\tchanged %s (%s(.*)%s)\n" % 
